# midisplit

./: CMakeLists.txt  README.txt
src/: CMakeLists.txt  Parameters.cpp  Parameters.h  Splitter.cpp  Splitter.h  Voice.cpp  Voice.h  const.h  midisplit.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp  test_Parameters.cpp  test_Splitter.cpp  test_Voice.cpp  test_utils.cpp
test/testfiles/: parameters.txt  parameters1.txt  parameters2.txt  parameters3.txt
